--- a/KilimoSchoolSystem/Views/Students/Create.cshtml
+++ b/KilimoSchoolSystem/Views/Students/Create.cshtml
@@ -31,7 +31,7 @@
                 <label asp-for="StreamId" class="control-label"></label>
                 <select asp-for="StreamId" class ="form-control" asp-items="ViewBag.StreamId"></select>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
